Fix .neighbor width overflow

--- a/src/scss/module/_content__block-common.scss
+++ b/src/scss/module/_content__block-common.scss
@@ -14,8 +14,7 @@
 .entry,
 .entry-archive,
 .entry-category,
-.subscribe,
-.neighbor{
+.subscribe{
   margin-top: 30px;
   padding-top: 30px;
   border-top: 1px solid rgba(0,0,0, .1);
