--- a/src/scss/module/_entry__aside.scss
+++ b/src/scss/module/_entry__aside.scss
@@ -48,8 +48,8 @@
 }
 
 .neighbor{
-  margin-top: 30px;
-  padding-top: 30px;
+  margin: 30px 0 0;
+  padding: 30px 0 0;
   border-top: 1px solid rgba(0,0,0, .15);
 }
 
@@ -79,10 +79,10 @@
   }
 
   .older::before{
-    content: 'older:';
+    content: '\6f\6c\64\65\72\3a';
   }
   .newer::before{
-    content: 'newer:';
+    content: '\6e\65\77\65\72\3a';
   }
 }
 
