--- a/src/scss/module/_responsive.scss
+++ b/src/scss/module/_responsive.scss
@@ -25,7 +25,6 @@
 
   .global-header,
   .content,
-  .neighbor,
   .global-footer{
     padding: 0 10px;
     min-width: 320px;
